--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="./app.css">
+    <link rel="stylesheet" href="dist/app.css">
 </head>
 
 <body>
@@ -94,7 +94,7 @@
         </section>
     </main>
 
-    <script src="./app.js"></script>
+    <script src="dist/app.js"></script>
 </body>
 
 </html>
